--- a/index/templates/user_list.html
+++ b/index/templates/user_list.html
@@ -40,7 +40,7 @@
 <!-- 本地导入 -->
 <script src="{% static 'js/vue.js' %}"></script>
 <script> src="{% static 'js/jquery-3.6.0.min.js' %}"  </script>
-<script> src="{% static 'plugins/bootstrap-3.4.1-dist/js/bootstrap.js' %}"  </script>
+<script> src="{% static 'js/bootstrap.min.js' %}"  </script>
 
 
 <div id="app">
